Adding the bride and groom section

--- a/index.html
+++ b/index.html
@@ -17,24 +17,69 @@
 </head>
 
 <body>
-    <div class="container-fluid p-0">
-        <div class="wedding-banner">
-            <div class="row">
-                <div class="col-8 offset-2 col-md-4 " style="height: 100vh; ">
-                    <div class="row">
-                        <div class="col wedding-banner-text" style="padding-top:5vh;">Hemant Weds Pracheta</div>
-                    </div>
-                    <div class="row">
-                        <div class="col save-the-date">
-                            <img src="assets/save-the-date.png" width="180vh" />
-                        </div>
-                    </div>
-                    <div class="row wedding-banner-text"></div>
-                    <div class="row">
-                        <div class="col wedding-banner-text wedding-banner-date">7th Feb 2022</div>
+
+    <div class="container-fluid">
+        <header>
+            <nav class="navbar navbar-light navbar-expand fixed-top">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#wedding-banner">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#bride-groom">Bride & Groom</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#event-details">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#gallery">Gallery</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
+        <div id="wedding-banner" class="row section">
+            <div class="col-8 offset-2 col-md-3 offset-md-1">
+                <div class="row wedding-banner-all">
+                    <div class="col wedding-banner-text" style="padding-top:5vh;">Hemant Weds Pracheta</div>
+                </div>
+                <div class="row">
+                    <div class="col save-the-date">
+                        <img src="assets/save-the-date.png" width="200vw" />
                     </div>
                 </div>
+                <div class="row wedding-banner-text"></div>
+                <div class="row">
+                    <div class="col wedding-banner-text wedding-banner-date">7th Feb 2022</div>
+                </div>
             </div>
+        </div>
+
+        <div id="bride-groom" class="row p-10 section">
+            <div class="row">
+                <h1>Bride and Groom</h1>
+            </div>
+            <div class="row">
+            <div class="col-md-6">
+                <img src="assets/ind-hemant.jpg" class="img-fluid">
+                <h2>Hemant Bhoyar</h2>
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </div>
+            <div class="col-md-6">
+                <img src="assets/ind-pracheta.jpg" class="img-fluid">
+                <h2>Pracheta Kule</h2>
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </div>
+        </div>
+        </div>
+
+        <div id="event-details" class="row section">
+            <h1>Events</h1>
+        </div>
+
+
+        <div id="gallery" class="row section">
+            <h1>Gallery</h1>
         </div>
     </div>
 
