--- a/index.html
+++ b/index.html
@@ -17,27 +17,16 @@
 </head>
 
 <body>
-
     <div class="container-fluid">
-        <header>
-            <nav class="navbar navbar-light navbar-expand fixed-top">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#wedding-banner">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#bride-groom">Bride & Groom</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#event-details">Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#gallery">Gallery</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        
+        <span class="down-arrow">
+            <a href="#bride-groom">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="white" class="bi bi-arrow-down"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                </svg>
+            </a>
+        </span>
         <div id="wedding-banner" class="row section">
             <div class="col-8 offset-2 col-md-3 offset-md-1">
                 <div class="row wedding-banner-all">
@@ -55,22 +44,52 @@
             </div>
         </div>
 
-        <div id="bride-groom" class="row p-10 section">
+
+        <nav class="navbar navbar-light navbar-expand">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#wedding-banner">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#bride-groom">Bride & Groom</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#event-details">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#gallery">Gallery</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div id="bride-groom" class="row section">
             <div class="row">
                 <h1>Bride and Groom</h1>
             </div>
             <div class="row">
-            <div class="col-md-6">
-                <img src="assets/ind-hemant.jpg" class="img-fluid">
-                <h2>Hemant Bhoyar</h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div class="col-md-4 offset-md-1">
+                    <img src="assets/ind-hemant.jpg" class="img-fluid">
+                    <h2>Hemant Bhoyar</h2>
+                    <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
+                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum.</p>
+                </div>
+                <div class="col-md-4 offset-md-1">
+                    <img src="assets/ind-pracheta.jpg" class="img-fluid">
+                    <h2>Pracheta Kule</h2>
+                    <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
+                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum.</p>
+                </div>
             </div>
-            <div class="col-md-6">
-                <img src="assets/ind-pracheta.jpg" class="img-fluid">
-                <h2>Pracheta Kule</h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-        </div>
         </div>
 
         <div id="event-details" class="row section">
@@ -79,8 +98,123 @@
 
 
         <div id="gallery" class="row section">
-            <h1>Gallery</h1>
+            <div class="row">
+                <h2>Gallery</h2>
+            </div>
+            <div class="row overflow-scroll" style="height: 80vh;">
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/landing.jpeg" class="img-thumbnail">
+                </div>
+            </div>
         </div>
+
+        <footer class="row">
+            <div class="col">
+                Designed and built by the bride and groom!
+            </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
