--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 <body>
     <div class="container-fluid">
         <span class="down-arrow">
-            <a href="#bride-groom">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="white" class="bi bi-arrow-down"
-                    viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+            <a href="#nav">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                 </svg>
             </a>
         </span>
@@ -44,8 +42,9 @@
             </div>
         </div>
 
+        <nav id="nav" class="navbar navbar-light navbar-expand mx-auto">
+            <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
 
-        <nav class="navbar navbar-light navbar-expand">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#wedding-banner">Home</a>
@@ -54,12 +53,13 @@
                     <a class="nav-link" href="#bride-groom">Bride & Groom</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#event-details">Events</a>
+                    <a class="nav-link" href="#events">Events</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#gallery">Gallery</a>
                 </li>
             </ul>
+            </div>
         </nav>
 
         <div id="bride-groom" class="row section">
@@ -92,8 +92,10 @@
             </div>
         </div>
 
-        <div id="event-details" class="row section">
-            <h1>Events</h1>
+        <div id="events" class="row section">
+            <div class="row">
+                <h1>Events</h1>
+            </div>
         </div>
 
 
