--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <div class="container-fluid">
         <span class="down-arrow">
             <a href="#nav">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white"
+                    class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
                 </svg>
             </a>
         </span>
@@ -45,20 +47,20 @@
         <nav id="nav" class="navbar navbar-light navbar-expand mx-auto">
             <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
 
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#wedding-banner">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#bride-groom">Bride & Groom</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#events">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#gallery">Gallery</a>
-                </li>
-            </ul>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#wedding-banner">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#bride-groom">Bride & Groom</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#events">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#gallery">Gallery</a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
@@ -103,111 +105,50 @@
             <div class="row">
                 <h2>Gallery</h2>
             </div>
-            <div class="row overflow-scroll" style="height: 80vh;">
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/landing.jpeg" class="img-thumbnail">
+            <div class="row">
+                <div id="carouselExampleControls" class="col-md-10 offset-md-1 carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
         </div>
