--- a/index.html
+++ b/index.html
@@ -101,50 +101,19 @@
         </div>
 
 
-        <div id="gallery" class="row section">
+        <div id="gallery" class="row section p-4">
             <div class="row">
                 <h2>Gallery</h2>
             </div>
             <div class="row">
-                <div id="carouselExampleControls" class="col-md-10 offset-md-1 carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/landing.jpeg" class="d-block w-100" alt="Hemant and pracheta">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                <div id="gallery-carousel" class="col-md-10 offset-md-1 carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner"></div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#gallery-carousel"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    <button class="carousel-control-next" type="button" data-bs-target="#gallery-carousel"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
@@ -163,6 +132,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="js/main.js" ></script>
 </body>
 
 </html>
