Coverting images to WebP

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="assets/ind-hemant.jpg" class="img-fluid" />
-
+                    <img src="assets/ind-hemant.webp" class="img-fluid" />`
                 </div>
                 <div class="col-md-6 text-part">
                     <h2>Hemant Bhoyar</h2>
@@ -90,8 +89,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 alt">
-                    <img src="assets/ind-pracheta.jpg" class="img-fluid" />
-
+                    <img src="assets/ind-pracheta.webp" class="img-fluid" />
                 </div>
                 <div class="col-md-6 text-part">
                     <h2>Pracheta Kule</h2>
