--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet" />
 
 
-    <link rel="stylesheet" type="text/css" href="css/fullpage.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/vendors/fullpage.min.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -183,8 +183,8 @@
         crossorigin="anonymous"></script>
 
     <!-- This following line is only necessary in the case of using the option `scrollOverflow:true` -->
-    <script type="text/javascript" src="js/scrolloverflow.min.js"></script>
-    <script type="text/javascript" src="js/fullpage.min.js"></script>
+    <script type="text/javascript" src="js/vendors/scrolloverflow.min.js"></script>
+    <script type="text/javascript" src="js/vendors/fullpage.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
