--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
                 </div>
             </div>
         </div>
-
         <div id="gallery" class="row section p-4">
             <div class="row">
                 <h1>Gallery</h1>
@@ -151,15 +150,18 @@
             </div>
         </div>
         <div class="row section" id="video">
-            <!-- <iframe width="853" height="300" src="https://www.youtube.com/embed/Sl-AI-rbfMY"
-                title="YouTube video player" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY" title="YouTube video player" frameborder="10"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe> -->
+                allowfullscreen></iframe>
         </div>
 
-        <footer class="row">
-            <div class="col">Designed and built by the bride and groom!</div>
-        </footer>
+    </div>
+
+    </div>
+
+    <footer class="row">
+        <div class="col">Designed and built by the bride and groom!</div>
+    </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/vendors/scrolloverflow.min.js"></script>
