--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div id="loader">
         <img src="assets/loader.gif" alt="">
     </div>
-    <div class="container-fluid" id="fullpage">
-        <div class="section">
+    <div class="container-fluid p-0" id="fullpage">
+        <div id="wedding-banner" class="section">
             <span class="down-arrow">
                 <i class="fas fa-chevron-down" onclick="fullpage_api.moveSectionDown();"></i>
             </span>
-            <div id="wedding-banner" class="row" style="height: 100vh !important;">
+            <div class="row">
                 <div class="col-8 offset-2 col-md-3 offset-md-1">
                     <div class="row wedding-banner-all">
                         <div class="col wedding-banner-text" style="padding-top: 5vh">
@@ -63,9 +63,11 @@
             </div>
         </div>
 
-        <div id="bride-groom" class="row section">
-            <div class="row">
-                <h1>Bride and Groom</h1>
+        <div id="bride-groom" class="section text-center">
+            <div class="row py-5">
+                <div class="col-12">
+                    <h1>Bride and Groom</h1>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
@@ -88,7 +90,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 alt">
+                <div class="col-md-6 order-md-2">
                     <img src="assets/ind-pracheta.webp" class="img-fluid" />
                 </div>
                 <div class="col-md-6 text-part">
@@ -106,54 +108,48 @@
                         Lorem Ipsum.
                     </p>
                 </div>
-                <div class="col-md-6 second">
-                    <img src="assets/ind-pracheta.webp" class="img-fluid" />
-
-                </div>
-
             </div>
         </div>
 
-        <div id="events" class="row section">
-            <div class="row">
-                <h1>Events</h1>
-                <div class="row">
-                    <div class="col-md-3">
-                        <img src="assets/haldi.webp" alt="">
-                        <p>Haldi <span>6th Feburary 2:00 PM</span></p>
-                    </div>
-                    <div class="col-md-3" id="reverse">
-                        <img src="assets/barat.webp" alt="">
-                        <p>Barat <span>6th Feburary 6:00 PM</span></p>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/sangeet.webp" alt="">
-                        <p>Sangeet <span>6th Feburary 9:00 PM</span></p>
-                    </div>
+        <div id="events" class="section background-white text-center">
+            <div class="row py-5">
+                <div class="col-12">
+                    <h1>Events</h1>
                 </div>
-                <div class="row">
-                    <div class="col-md-6" id="one">
-                        <img src="assets/wedding.webp" alt="">
-                        <p>Wedding <span>7th Feburary 11:30 AM</span></p>
-                    </div>
-                    <!-- <img src="assets/ganesha.webp" id="ganesha" alt=""> -->
-                    <div class="col-md-6" id="two">
-                        <img src="assets/phere.webp" alt="">
-                        <p>Phere <span>7th Feburary 1:00 PM</span></p>
-                    </div>
-
+            </div>
+            <div class="row py-3">
+                <div class="col-md-4 py-3">
+                    <img src="assets/haldi.webp" class="img-fluid" alt="">
+                    <p>Haldi <span>6th Feburary 2:00 PM</span></p>
+                </div>
+                <div class="col-md-4 py-3 d-flex flex-column flex-md-column-reverse">
+                    <img src="assets/barat.webp" class="img-fluid" alt="">
+                    <p>Barat <span>6th Feburary 6:00 PM</span></p>
+                </div>
+                <div class="col-md-4 py-3">
+                    <img src="assets/sangeet.webp" class="img-fluid" alt="">
+                    <p>Sangeet <span>6th Feburary 9:00 PM</span></p>
+                </div>
+                <div class="col-md-6 py-3" id="one">
+                    <img src="assets/wedding.webp" class="img-fluid" alt="">
+                    <p>Wedding <span>7th Feburary 11:30 AM</span></p>
+                </div>
+                <div class="col-md-6 py-3" id="two">
+                    <img src="assets/phere.webp" class="img-fluid" alt="">
+                    <p>Phere <span>7th Feburary 1:00 PM</span></p>
                 </div>
             </div>
         </div>
-        <div id="gallery" class="row section p-4">
-            <div class="row">
+
+        <div id="gallery" class="section">
+            <div class="row py-5">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Gallery</h1>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col col-md-10 offset-md-1">
+            <div class="row my-5">
+                <div class="col-10 offset-1 p-1">
                     <div class="gallery-container" id="animated-thumbnails-gallery">
                         <a data-lg-size="1600-1067" class="gallery-item"
                             data-src="https://images.unsplash.com/photo-1609342122563-a43ac8917a3a?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1600&q=80"
@@ -321,19 +317,26 @@
                 </div>
             </div>
         </div>
-        <div class="row section" id="video">
-            <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY" title="YouTube video player" frameborder="10"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+
+        <div id="video" class="section text-center background-white">
+            <div class="row py-5">
+                <div class="col col-md-10 offset-md-1">
+                    <h1>Engagement</h1>
+                </div>
+            </div>
+            <div class="row h-100">
+                <div class="col-md-10 offset-md-1 h-100">
+                    <iframe class="enagagement-video" src="https://www.youtube.com/embed/Sl-AI-rbfMY"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
 
-    </div>
-
-    </div>
-
-    <footer class="row">
-        <div class="col">Designed and built by the bride and groom!</div>
-    </footer>
+        <footer class="row">
+            <div class="col">Designed and built by the bride and groom!</div>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
