--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div id="bride-groom" class="section text-center">
-            <div class="row py-5">
+            <div class="row section-header">
                 <div class="col-12">
                     <h1>Bride and Groom</h1>
                 </div>
@@ -112,7 +112,7 @@
         </div>
 
         <div id="events" class="section background-white text-center">
-            <div class="row py-5">
+            <div class="row section-header">
                 <div class="col-12">
                     <h1>Events</h1>
                 </div>
@@ -142,7 +142,7 @@
         </div>
 
         <div id="gallery" class="section">
-            <div class="row py-5">
+            <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Gallery</h1>
                 </div>
@@ -319,23 +319,29 @@
         </div>
 
         <div id="video" class="section text-center background-white">
-            <div class="row py-5">
+            <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Engagement</h1>
                 </div>
             </div>
-            <div class="row h-100">
-                <div class="col-md-10 offset-md-1 h-100">
-                    <iframe class="enagagement-video" src="https://www.youtube.com/embed/Sl-AI-rbfMY"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+            <div class="row">
+                <div class="col-10 offset-1">
+                    <div class="ratio ratio-16x9">    
+                        <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <footer class="row">
-            <div class="col">Designed and built by the bride and groom!</div>
+        <footer class="text-center">
+            <div class="row">
+                <div class="col">
+                    Designed and built by the bride and groom!
+                </div>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
