Made some styling changes

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         </div>
 
         <div id="events" class="section background-white text-center">
+            <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col-12">
                     <h1>Events</h1>
@@ -319,6 +320,7 @@
         </div>
 
         <div id="video" class="section text-center background-white">
+            <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Engagement</h1>
@@ -326,9 +328,9 @@
             </div>
             <div class="row">
                 <div class="col-10 offset-1">
-                    <div class="ratio ratio-16x9">    
-                        <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY"
-                            title="YouTube video player" frameborder="0"
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY" title="YouTube video player"
+                            frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
@@ -336,7 +338,7 @@
             </div>
         </div>
 
-        <footer class="text-center">
+        <footer class="text-center fp-auto-height fp-section">
             <div class="row">
                 <div class="col">
                     Designed and built by the bride and groom!
