--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
         </div>
 
-        <footer class="text-center fp-auto-height fp-section">
+        <footer class="text-center fp-auto-height fp-section background-white">
             <div class="row">
                 <div class="col">
                     Designed and built by the bride and groom!
