--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
         </div>
 
-        <div id="gallery" class="section">
+        <div id="gallery" class="section design-new">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Gallery</h1>
@@ -319,7 +319,7 @@
             </div>
         </div>
 
-        <div id="video" class="section text-center background-white">
+        <div id="engagement" class="section text-center background-white">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
@@ -330,6 +330,24 @@
                 <div class="col-10 offset-1">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="prewedding" class="section text-center">
+            <div class="row section-header">
+                <div class="col col-md-10 offset-md-1">
+                    <h1>Pre wedding</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-10 offset-1">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/ceW4V_PZNRI" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
