Changing to inline gallery

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.4.0-beta.0/css/lightgallery-bundle.min.css"
         integrity="sha512-91yJwfiGTCo9TM74ZzlAIAN4Eh5EWHpQJUfvo/XhpH6lzQtiRFkFRW1W+JSg4ch4XW3/xzh+dY4TOw/ILpavQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/vendors/justifiedGallery.min.css">
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -150,9 +149,8 @@
             </div>
 
             <div class="row my-5">
-                <div class="col-10 offset-1 p-1">
-                    <div class="gallery-container" id="animated-thumbnails-gallery">
-                    </div>
+                <div class="col-10 offset-1">
+                    <div id="prewedding-gallery" class="inline-gallery-container"></div>
                 </div>
             </div>
         </div>
@@ -206,7 +204,6 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="js/vendors/jquery.min.js"></script>
-    <script src="js/vendors/jquery.justifiedGallery.min.js"></script>
     <script type="text/javascript" src="js/vendors/scrolloverflow.min.js"></script>
     <script type="text/javascript" src="js/vendors/fullpage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.4.0-beta.0/lightgallery.min.js"
