Fix gallery and add new prewedding video

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
             <div class="row">
                 <div class="col-10 offset-1">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/ceW4V_PZNRI" title="YouTube video player"
+
+                        <iframe src="https://www.youtube.com/embed/OjnBbDsJc5c" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
