Adding more details

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="row wedding-banner-text"></div>
                     <div class="row">
                         <div class="col wedding-banner-text wedding-banner-date">
-                            7th Feb 2022
+                            7th Feb 2022<br/>Golden leaf Banquet Hall, Near Kathora Chowk, Amravati
                         </div>
                     </div>
                 </div>
@@ -120,23 +120,27 @@
             <div class="row py-3">
                 <div class="col-md-4 py-3">
                     <img src="assets/haldi.webp" class="img-fluid" alt="">
-                    <p>Haldi <span>6th Feburary 2:00 PM</span></p>
+                    <p>Haldi <span>6th Feburary 2:00 PM, Sai nagar / Priya Township</span></p>
                 </div>
                 <div class="col-md-4 py-3 d-flex flex-column flex-md-column-reverse">
                     <img src="assets/barat.webp" class="img-fluid" alt="">
-                    <p>Barat <span>6th Feburary 6:00 PM</span></p>
+                    <p>Barat <span>6th Feburary 6:00 PM, Sai nagar</span></p>
                 </div>
                 <div class="col-md-4 py-3">
                     <img src="assets/sangeet.webp" class="img-fluid" alt="">
-                    <p>Sangeet <span>6th Feburary 9:00 PM</span></p>
+                    <p>Sangeet <span>6th Feburary 9:30 PM, Golden leaf hall</span></p>
                 </div>
-                <div class="col-md-6 py-3" id="one">
+                <div class="col-md-4 py-3" id="one">
                     <img src="assets/wedding.webp" class="img-fluid" alt="">
-                    <p>Wedding <span>7th Feburary 11:30 AM</span></p>
+                    <p>Wedding <span>7th Feburary 11:30 AM, Golden leaf hall</span></p>
                 </div>
-                <div class="col-md-6 py-3" id="two">
+                <div class="col-md-4 py-3" id="two">
                     <img src="assets/phere.webp" class="img-fluid" alt="">
-                    <p>Phere <span>7th Feburary 1:00 PM</span></p>
+                    <p>Phere <span>7th Feburary 1:00 PM, Golden leaf hall</span></p>
+                </div>
+                <div class="col-md-4 py-3" id="two">
+                    <img src="assets/phere.webp" class="img-fluid" alt="">
+                    <p>Reception <span>13th Feburary 7:30 PM, Seasons banquet, Akurdi, Pune</span></p>
                 </div>
             </div>
         </div>
