Fix the anchors

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="assets/loader.gif" alt="">
     </div>
     <div class="container-fluid p-0" id="fullpage">
-        <div id="wedding-banner" data-anchor="wedding-banner" class="section">
+        <div data-anchor="wedding-banner" class="wedding-banner section">
             <span class="down-arrow">
                 <i class="fas fa-chevron-down" onclick="fullpage_api.moveSectionDown();"></i>
             </span>
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div id="bride-groom" data-anchor="bride-groom" class="section text-center">
+        <div data-anchor="bride-groom" class="bride-groom section text-center">
             <div class="row section-header">
                 <div class="col-12">
                     <h1>Bride and Groom</h1>
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div id="events" data-anchor="events" class="section background-white text-center">
+        <div data-anchor="events" class="events section background-white text-center">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col-12">
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-        <div id="engagement" data-anchor="engagement" class="section text-center background-white">
+        <div data-anchor="engagement" class="engagement section text-center background-white">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
@@ -164,7 +164,7 @@
             </div>
         </div>
 
-        <div id="prewedding" data-anchor="prewedding" class="section text-center background-white">
+        <div data-anchor="prewedding" class="prewedding section text-center background-white">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
@@ -184,7 +184,7 @@
             </div>
         </div>
 
-        <div id="gallery" data-anchor="gallery" class="section">
+        <div data-anchor="gallery" class="gallery section">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Gallery</h1>
@@ -197,7 +197,7 @@
             </div>
         </div>
 
-        <footer class="text-center fp-auto-height fp-section">
+        <footer data-anchor="footer" class="text-center fp-auto-height fp-section">
             <div class="row">
                 <div class="col">
                     Designed and built by the bride and groom!
