Updating the bride groom section

--- a/index.html
+++ b/index.html
@@ -69,43 +69,25 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <img src="assets/ind-hemant.webp" class="img-fluid" />
+                <div class="col-md-4 offset-md-1 p-3 order-md-1">
+                    <picture>
+                        <img src="assets/IMG_5580.jpg" class="img-fluid rounded-circle" />
+                    </picture>
                 </div>
-                <div class="col-md-6 text-part">
+                <div class="col-md-6 p-5 order-md-4">
                     <h2>Hemant Bhoyar</h2>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into
-                        electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets
-                        containing Lorem Ipsum passages, and more recently with desktop
-                        publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.
-                    </p>
+                    <a href="https://www.linkedin.com/in/hemant-bhoyar/" target="_blank"><img src="assets/linkedin.png" class="img-social"/></a>
+                    <a href="https://www.facebook.com/hemant.bhoyar.9" target="_blank"><img src="assets/fb.png" class="img-social"/></a>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 order-md-2">
-                    <img src="assets/ind-pracheta.webp" class="img-fluid" />
+                <div class="col-md-4 offset-md-2 p-3 order-md-3">
+                    <picture class="rounded-circle">
+                        <img src="assets/IMG_5503.jpg" class="img-fluid rounded-circle" />
+                    </picture>
                 </div>
-                <div class="col-md-6 text-part">
+                <div class="col-md-6 p-5 order-md-5">
                     <h2>Pracheta Kule</h2>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into
-                        electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets
-                        containing Lorem Ipsum passages, and more recently with desktop
-                        publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.
-                    </p>
+                    <a href="https://www.linkedin.com/in/pracheta-kule-3303b7113" target="_blank"><img src="assets/linkedin.png" class="img-social"/></a>
+                    <a href="https://www.facebook.com/pracheta.kule" target="_blank"><img src="assets/fb.png" class="img-social"/></a>
                 </div>
             </div>
         </div>
