--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
                     <h1>Pre wedding</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row video">
                 <div class="col-10 offset-1">
                     <div class="ratio ratio-16x9">
-
                         <iframe src="https://www.youtube.com/embed/OjnBbDsJc5c" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
